[package]
name = "arcade-monitor"
version = "0.1.1"
edition = "2021"
authors = ["SkyfallWasTaken <mahadkalam1@proton.me>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3"
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
scraper = "0.19.0"
indoc = "2.0.5"

# We don't use getrandom, but we enable the "js" feature to enable
# WebAssembly support.
getrandom = { version = "0.2", features = ["js"] }
reqwest = "0.12.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
maplit = "1.0.2"

[package.metadata.cargo-machete]
ignored = ["getrandom"]
